fixing styling issues so they align better to the image

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,6 @@
-head {
+header {
   text-align: center;
+  border-bottom: 5px solid #000; /
 }
 
 body {
